# DjangoREST_blog

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/blog/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
config/: celery.py  settings.py  urls.py
nginx/: default.conf
